[gd_scene load_steps=28 format=2]

[ext_resource path="res://Scripts/menu/lobby/LobbyHostMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/sfx/ui-navigate.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/sfx/ui-select.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/fonts/Extrude.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=8]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.237305, 0.0785608, 0.0785608, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=10]
font_data = SubResource( 9 )

[sub_resource type="StyleBoxLine" id=11]
color = Color( 0.235294, 0.0784314, 0.0784314, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=13]
color = Color( 0.34902, 0.113725, 0.113725, 1 )
thickness = 10

[sub_resource type="StyleBoxLine" id=12]
color = Color( 0.34902, 0.113725, 0.113725, 1 )
thickness = 10

[sub_resource type="DynamicFontData" id=16]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=17]
size = 12
font_data = SubResource( 16 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=15]
font_data = SubResource( 14 )

[sub_resource type="DynamicFontData" id=23]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=24]
size = 12
font_data = SubResource( 23 )

[sub_resource type="StyleBoxFlat" id=28]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.235294, 0.0784314, 0.0784314, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=26]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.235294, 0.0784314, 0.0784314, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=27]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.235294, 0.0784314, 0.0784314, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=25]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.198242, 0.0679522, 0.0679522, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=19]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color( 0.235294, 0.0784314, 0.0784314, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/fonts/DotGothic16.ttf"

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = SubResource( 3 )

[node name="LobbyJoinMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.282353, 0.0941176, 0.0941176, 1 )

[node name="Root" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Contents" type="VBoxContainer" parent="Root"]
margin_left = 329.0
margin_top = 185.0
margin_right = 695.0
margin_bottom = 414.0
custom_constants/separation = 10
alignment = 1

[node name="Header" type="Label" parent="Root/Contents"]
margin_right = 366.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 2 )
text = "Create a Lobby"
align = 1

[node name="ServerAddress" type="LineEdit" parent="Root/Contents"]
margin_top = 58.0
margin_right = 366.0
margin_bottom = 82.0
size_flags_vertical = 4
custom_constants/minimum_spaces = 30
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
max_length = 30
placeholder_text = "Server address"
caret_blink = true

[node name="ServerPort" type="LineEdit" parent="Root/Contents"]
margin_top = 92.0
margin_right = 366.0
margin_bottom = 116.0
size_flags_vertical = 4
custom_constants/minimum_spaces = 30
custom_fonts/font = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
max_length = 4
placeholder_text = "Port"
caret_blink = true

[node name="PlayerLimitContent" type="HBoxContainer" parent="Root/Contents"]
margin_top = 126.0
margin_right = 366.0
margin_bottom = 150.0

[node name="PlayerLimitLabel" type="Label" parent="Root/Contents/PlayerLimitContent"]
margin_right = 160.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 10 )
text = "Number of Player(s):"

[node name="Spacer" type="Control" parent="Root/Contents/PlayerLimitContent"]
margin_left = 164.0
margin_right = 196.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PlayerLimit" type="HSlider" parent="Root/Contents/PlayerLimitContent"]
margin_left = 200.0
margin_right = 329.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 4.0
custom_styles/slider = SubResource( 11 )
custom_styles/grabber_area_highlight = SubResource( 13 )
custom_styles/grabber_area = SubResource( 12 )
max_value = 30.0
value = 1.0
scrollable = false

[node name="PlayerLimitCount" type="Label" parent="Root/Contents/PlayerLimitContent"]
margin_left = 333.0
margin_top = 3.0
margin_right = 366.0
margin_bottom = 21.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 17 )
text = "1"
align = 1

[node name="MapSelectionContent" type="HBoxContainer" parent="Root/Contents"]
margin_top = 160.0
margin_right = 366.0
margin_bottom = 184.0

[node name="MapSelectionLabel" type="Label" parent="Root/Contents/MapSelectionContent"]
margin_right = 32.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 15 )
text = "Map:"

[node name="Spacer" type="Control" parent="Root/Contents/MapSelectionContent"]
margin_left = 36.0
margin_right = 199.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="MapSelection" type="OptionButton" parent="Root/Contents/MapSelectionContent"]
margin_left = 203.0
margin_right = 366.0
margin_bottom = 24.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 24 )
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 26 )
custom_styles/focus = SubResource( 27 )
custom_styles/disabled = SubResource( 25 )
custom_styles/normal = SubResource( 19 )
text = "None"
align = 1

[node name="OptionsContent" type="HBoxContainer" parent="Root/Contents"]
margin_top = 194.0
margin_right = 366.0
margin_bottom = 229.0

[node name="StartOption" type="Label" parent="Root/Contents/OptionsContent"]
margin_right = 60.0
margin_bottom = 35.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
text = "Start"

[node name="Spacer" type="Control" parent="Root/Contents/OptionsContent"]
margin_left = 64.0
margin_right = 314.0
margin_bottom = 35.0
size_flags_horizontal = 3

[node name="BackOption" type="Label" parent="Root/Contents/OptionsContent"]
margin_left = 318.0
margin_right = 366.0
margin_bottom = 35.0
mouse_filter = 0
custom_fonts/font = SubResource( 4 )
text = "Back"
align = 2

[node name="UiNavigatePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -15.0
bus = "In-Game"

[node name="UiSelectPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -15.0
bus = "In-Game"

[connection signal="focus_entered" from="Root/Contents/ServerAddress" to="." method="_on_ServerAddress_focus_entered"]
[connection signal="focus_exited" from="Root/Contents/ServerAddress" to="." method="_on_ServerAddress_focus_exited"]
[connection signal="text_changed" from="Root/Contents/ServerAddress" to="." method="_on_ServerAddress_text_changed"]
[connection signal="focus_entered" from="Root/Contents/ServerPort" to="." method="_on_ServerPort_focus_entered"]
[connection signal="focus_exited" from="Root/Contents/ServerPort" to="." method="_on_ServerPort_focus_exited"]
[connection signal="text_changed" from="Root/Contents/ServerPort" to="." method="_on_ServerPort_text_changed"]
[connection signal="focus_entered" from="Root/Contents/PlayerLimitContent/PlayerLimit" to="." method="_on_PlayerLimit_focus_entered"]
[connection signal="focus_exited" from="Root/Contents/PlayerLimitContent/PlayerLimit" to="." method="_on_PlayerLimit_focus_exited"]
[connection signal="value_changed" from="Root/Contents/PlayerLimitContent/PlayerLimit" to="." method="_on_PlayerLimit_value_changed"]
[connection signal="item_selected" from="Root/Contents/MapSelectionContent/MapSelection" to="." method="_on_MapSelection_item_selected"]
[connection signal="gui_input" from="Root/Contents/OptionsContent/StartOption" to="." method="_on_StartOption_gui_input"]
[connection signal="mouse_entered" from="Root/Contents/OptionsContent/StartOption" to="." method="_on_StartOption_mouse_entered"]
[connection signal="mouse_exited" from="Root/Contents/OptionsContent/StartOption" to="." method="_on_StartOption_mouse_exited"]
[connection signal="gui_input" from="Root/Contents/OptionsContent/BackOption" to="." method="_on_BackOption_gui_input"]
[connection signal="mouse_entered" from="Root/Contents/OptionsContent/BackOption" to="." method="_on_BackOption_mouse_entered"]
[connection signal="mouse_exited" from="Root/Contents/OptionsContent/BackOption" to="." method="_on_BackOption_mouse_exited"]
